# kql-engine

./: .gitignore  Cargo.toml  package.json  rustfmt.toml  test.kql
.github/: dependabot.yml
migrations/: 20260105124509_init.mir.json  20260105124509_init.sql  20260105124524_add_age.mir.json  20260105124524_add_age.sql
projects/kql-analyzer/: Cargo.toml
projects/kql-analyzer/src/: lib.rs
projects/kql-analyzer/src/codegen/: rust.rs
projects/kql-analyzer/src/hir/: lower.rs  mod.rs
projects/kql-analyzer/src/lir/: mod.rs  sql_gen.rs
projects/kql-analyzer/src/migration/: manager.rs  mod.rs
projects/kql-analyzer/src/mir/: mir_gen.rs  mod.rs
projects/kql-analyzer/tests/: aggregate_test.rs  annotation_test.rs  codegen_dialect_test.rs  codegen_rust_test.rs  codegen_test.rs  complex_storage_test.rs  composite_pk_index.rs  dml_gen_test.rs  foreign_key_test.rs  join_gen_test.rs  join_test.rs  lowering_test.rs  many_to_many_test.rs  member_access_test.rs  migration_manager_test.rs  migration_test.rs  query_gen_test.rs  relation_test.rs  sql_gen_test.rs  table_annotation.rs  type_inference_test.rs  type_mapping_test.rs  udt_test.rs  window_test.rs
projects/kql-analyzer/tests/common/: mod.rs
projects/kql-analyzer/tests/snapshots/: aggregate_avg_price.sql  aggregate_category_stats.sql  aggregate_total_products.sql  ddl_auth_schema.sql  expr_avg_price.sql  join_user_posts_comments_filter.sql  query_auto_join_post_author.sql  window_function_user_rank.sql
projects/kql-ast/: Cargo.toml
projects/kql-ast/src/: lib.rs
projects/kql-cli/: Cargo.toml
projects/kql-cli/src/: lib.rs  main.rs
projects/kql-cli/src/cmds/: check.rs  compile.rs  generate.rs  migrate.rs  migration.rs  mod.rs  pull.rs
projects/kql-core/: Cargo.toml
projects/kql-core/src/: config.rs  lib.rs
projects/kql-hir/: Cargo.toml
projects/kql-hir/src/: lib.rs  lower.rs
projects/kql-lsp/: Cargo.toml
projects/kql-lsp/src/: completion.rs  diagnostics.rs  lib.rs  main.rs  server.rs
projects/kql-parser/: Cargo.toml
projects/kql-parser/src/: lexer.rs  lib.rs  parser.rs
projects/kql-parser/tests/: main.rs
projects/kql-runtime/: Cargo.toml
projects/kql-runtime/src/: lib.rs
projects/kql-transpiler/: Cargo.toml
projects/kql-transpiler/src/: lib.rs
projects/kql-types/: Cargo.toml
projects/kql-types/errors/: display.rs
projects/kql-types/src/: errors.rs  lib.rs
projects/kql-types/src/errors/: convert.rs  display.rs  mod.rs
projects/kql-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json  tsconfig.json
projects/kql-vscode/src/: extension.ts
projects/kql-vscode/src/test/: runTest.ts
projects/kql-vscode/src/test/suite/: extension.test.ts  index.ts
projects/kql-vscode/syntaxes/: kql.tmLanguage.json
projects/kql-wasi/: Cargo.toml  compiler.wit
projects/kql-wasi/src/: lib.rs
