[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/kql-ast",
    "projects/kql-parser",
    "projects/kql-core",
    "projects/kql-cli",
]
exclude = [
    "projects/.DS_Store",
]

[workspace.package]
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/aster-practice/kql-engine"

[workspace.dependencies]
kql-types = { path = "projects/kql-types" }
kql-ast = { path = "projects/kql-ast" }
kql-parser = { path = "projects/kql-parser" }
kql-analyzer = { path = "projects/kql-analyzer" }
kql-core = { path = "projects/kql-core" }
kql-cli = { path = "projects/kql-cli" }
kql-wasi = { path = "projects/kql-wasi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
wit-bindgen = "0.17.0"
itertools = "0.12"
smallvec = "1.11"
rowan = "0.15"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "macros"] }

[profile.release]
lto = true
panic = "abort"
