[package]
name = "kql-analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Analyzer for KQL, including HIR, MIR and LIR"

[dependencies]
kql-types = { workspace = true }
kql-ast = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
sqlparser = "0.43"
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
kql-parser = { workspace = true }
tempfile = "3.8"

[features]
default = ["serde"]
serde = ["dep:serde", "kql-types/serde", "kql-ast/serde"]
