[package]
name = "kql-ast"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Lossless AST for KQL"

[dependencies]
kql-types = { path = "../kql-types" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "kql-types/serde"]
