[package]
name = "kql-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Lossless AST for KQL"

[dependencies]
kql-types = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "kql-types/serde"]
