[package]
name = "kql-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core compiler and runtime for KQL"

[dependencies]
kql-parser = { workspace = true }
kql-ast = { workspace = true }
kql-analyzer = { workspace = true }
kql-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[features]
default = ["serde"]
serde = ["kql-parser/serde", "kql-ast/serde", "kql-analyzer/serde", "kql-types/serde"]
