[package]
name = "kql-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Hand-written Pratt Parser for KQL"

[dependencies]
kql-types = { workspace = true }
kql-ast = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "kql-types/serde", "kql-ast/serde"]
