[package]
name = "kql-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.33", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
