[package]
name = "kql-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Common types and error definitions for KQL"

[dependencies]
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
sqlx = ["dep:sqlx"]
