[package]
name = "kql-wasi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "WASI component for KQL"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kql-core = { workspace = true, features = ["serde"] }
kql-types = { workspace = true, features = ["serde"] }
kql-analyzer = { workspace = true, features = ["serde"] }
wit-bindgen = "0.17.0"
serde_json = "1.0"

[features]
default = []
